<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ble_app_name">BluetoohModule</string>
    <string name="ble_hello_cristinal">Hello</string>
    <string name="ble_greet">Alpha Ebot welcome you to connect with it</string>
    <string name="ble_welcome_button">Let\'s start</string>

    <string name="ble_start_tip">Press On/Off on  robot\'s back for 3 seconds to turn it on.</string>
    <string name="ble_sure_start">My robot has stood Up.</string>
    <string name="ble_next">Next</string>
    <string name="ble_connect_title">Choose a robot to connect.</string>
    <string name="ble_connect_tip">Turn on the bluetooth of your device and put it close to robot\'s back.</string>
    <string name="ble_connect">Connect</string>
    <string name="ble_connecting">Connecting with robot</string>
    <string name="ble_no_robot">No robot found</string>
    <string name="ble_broken_tip">Your bluetooth has disconnected with robot, please reconnect it.</string>
    <string name="ble_cellphone_off_tip">Your bluetooth is off, please turn it on in the settings.</string>
    <string name="ble_location_permission_dialogue">Alpha Ebot will need your location when it is connected to Wi-Fi.  Once you are connected, you can turn it off in your settings.</string>
    <string name="ble_connnect_timeout">Connection is overtime</string>
    <string name="ble_connect_success">Connection Successed</string>

    <string name="wifi_choose" tools:ignore="ResourceName">Choose Wi-fi</string>
    <string name="wifi_5G_tip" tools:ignore="ResourceName">(Not support 5G Wi-Fi)</string>
    <string name="wifi_enter_password_title" tools:ignore="ResourceName">Enter Wi-Fi Password</string>
    <string name="wifi_change" tools:ignore="ResourceName">Choose another network</string>
    <string name="wifi_no_wifi" tools:ignore="ResourceName">No Wi-Fi found</string>
    <string name="wifi_no_wifi_tip" tools:ignore="ResourceName">You can try to input Wi-Fi name</string>
    <string name="wifi_connect_without_password" tools:ignore="ResourceName">Are you sure to connect without a password?</string>
    <string name="ble_btn_input_wifi">Input Wi-Fi name</string>
    <string name="wifi_connecting" tools:ignore="ResourceName">Connecting....</string>
    <string name="wifi_connect_succeed" tools:ignore="ResourceName">Connection succeed.</string>
    <string name="wifi_connect_fail" tools:ignore="ResourceName">Connection failed.</string>


    <string name="about_robot_title" tools:ignore="ResourceName">About Robot</string>
    <string name="about_robot_disconnect" tools:ignore="ResourceName">Disconnect robot</string>
    <string name="about_robot_change_wifi" tools:ignore="ResourceName">Change another Wi-Fi</string>
    <string name="about_robot_version" tools:ignore="ResourceName">Robot Version</string>
    <string name="about_robot_auto_update" tools:ignore="ResourceName">Auto update</string>
    <string name="about_wifi" tools:ignore="ResourceName">Wi-Fi</string>
    <string name="about_robot_serial_number" tools:ignore="ResourceName">Robot serial number</string>
    <string name="about_robot_ip" tools:ignore="ResourceName">Robot IP</string>
    <string name="about_robot_go_connect" tools:ignore="ResourceName">Go to connect</string>
    <string name="about_robot_disconnect_dialogue" tools:ignore="ResourceName">Are you sure to disconnect with Robot %1$s?</string>
    <string name="ble_disconnect">Disconnect</string>

    <string name="ble_robot_language_english" tools:ignore="ResourceName">English</string>
    <string name="about_robot_language" tools:ignore="ResourceName">Robot Language</string>
    <string name="about_robot_vsersion" tools:ignore="ResourceName">Robot Version</string>
    <string name="about_system_vsersion" tools:ignore="ResourceName">System Version</string>
    <string name="about_firmware_vsersion" tools:ignore="ResourceName">Voice firmware Version</string>
    <string name="about_harward_vsersion" tools:ignore="ResourceName">Hardwre Version</string>
    <string name="about_robot_auto_update_off" tools:ignore="ResourceName">Turn it off, the robot can not update to the newest version automatically. And you will receive a prompt of new version.</string>
    <string name="about_robot_auto_update_on" tools:ignore="ResourceName">Turn on Auto Update, the robot will update when new version is available.  If turn it off,  you can only receive a tip.</string>
    <string name="common_btn_switch_off" tools:ignore="ResourceName">Turn off</string>
    <string name="common_btn_switch_on" tools:ignore="ResourceName">Turn on</string>
    <string name="about_robot_new_version" tools:ignore="ResourceName">A new robot version is available, will you update it right now?</string>
    <string name="about_robot_auto_update_download" tools:ignore="ResourceName">Downloading robot updates  (#%) ...</string>
    <string name="about_robot_auto_update_download1" tools:ignore="ResourceName">Downloading robot updates...</string>
    <string name="about_robot_auto_update_download_fail" tools:ignore="ResourceName">Failed to download updates.</string>
    <string name="about_robot_language_done" tools:ignore="ResourceName">Done</string>
    <string name="about_robot_language_dialogue" tools:ignore="ResourceName">Are you sure you want to change the robot language to #? This will take you 3 or 4 minutes of time.</string>
    <string name="about_robot_language_changing_success" tools:ignore="ResourceName">Robot language is # now.</string>
    <string name="about_robot_language_changing_success_1" tools:ignore="ResourceName">Robot language change success .</string>
    <string name="about_robot_language_low_battery_tips_1" tools:ignore="ResourceName">Robot battery is low! </string>
    <string name="about_robot_language_low_battery_tips_2" tools:ignore="ResourceName">Robot language can not be changed, please charge the robot first.</string>
    <string name="about_robot_language_low_battery_tips_3" tools:ignore="ResourceName">please charge the robot first.</string>
    <string name="about_robot_language_changing_fail" tools:ignore="ResourceName">Failed to change the robot language.</string>
    <string name="about_robot_language_package_downloading" tools:ignore="ResourceName">Downloading the package...</string>
    <string name="about_robot_language_package_download_fail" tools:ignore="ResourceName">Failed to download the package. Please check the network.</string>
    <string name="about_robot_language_package_dialogue" tools:ignore="ResourceName">There is no # package in the robot system, please connect the robot to Wi-Fi and download the package first.</string>
    <string name="about_robot_upgrade_success" tools:ignore="ResourceName">Robot is updated to the lasted version.</string>
    <string name="about_robot_upgrade_fail" tools:ignore="ResourceName">Failed to update the new version.</string>
    <string name="about_robot_updating" tools:ignore="ResourceName">Robot is updating, please Do Not power off the robot.</string>

</resources>
