<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    tools:context="com.ubt.en.alpha1e.ble.activity.BleWifiInputActivity">

    <ImageView
        android:id="@+id/ble_iv_back"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"/>

    <ImageView
        android:id="@+id/ble_iv_close"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"/>

    <TextView
        android:id="@+id/bleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/wifi_enter_password_title"
        android:textColor="@color/base_tv_large_black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bleTextview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/wifi_5G_tip"
        android:textColor="@color/base_tv_middle_gray1"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bleTextview"/>

    <EditText
        android:id="@+id/ble_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:ems="18"
        android:imeOptions="flagNoExtractUi"
        android:textCursorDrawable="@drawable/ble_edittext_line"
        android:textSize="@dimen/sp_16"
        android:theme="@style/ble_MyEditText"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bleTextview4"/>


    <EditText
        android:id="@+id/ble_edit_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:ems="18"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/ble_edittext_line"
        android:textSize="@dimen/sp_16"
        android:theme="@style/ble_MyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ble_edit_name"/>


    <ImageView
        android:id="@+id/ble_show_passwd"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@drawable/ic_password_disshow"
        app:layout_constraintEnd_toEndOf="@+id/ble_edit_passwd"
        app:layout_constraintTop_toTopOf="@+id/ble_edit_passwd"/>

    <TextView
        android:id="@+id/ble_choose_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/wifi_change"
        android:textColor="@color/base_blue"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ble_show_passwd"/>

    <Button
        android:id="@+id/ble_connect_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/ble_connect_btn_selector"
        android:gravity="center"
        android:text="@string/ble_connect"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ble_choose_wifi"/>

</android.support.constraint.ConstraintLayout>
