<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    tools:context="com.ubt.en.alpha1e.ble.activity.BleStatuActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:visibility="visible">


            <ImageView
                android:id="@+id/iv_robot_back"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/bleTextview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:text="@string/about_robot_title"
                android:textColor="@color/base_tv_large_black"
                android:textSize="@dimen/sp_18"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_robot_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_title"
            android:background="@drawable/ble_aboutrobot_item_selector"
            >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                >

                <TextView
                    android:id="@+id/tv_robot_update"
                    style="@style/ble_tv_robot_left"
                    android:text="@string/about_robot_auto_update"
                    />

                <CheckBox
                    android:id="@+id/ckb_auto_upgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_30"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/checkbox_upgrade_style"/>

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_robot_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_robot_update"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/ble_aboutrobot_item_selector"
            >

            <RelativeLayout
                android:id="@+id/rl_system_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_system_version"
                    style="@style/ble_tv_robot_left"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="System version"
                    />

                <TextView
                    android:id="@+id/tv_robot_version"
                    style="@style/ble_tv_robot_right"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="@dimen/dp_15"
                    android:drawableEnd="@drawable/ble_update_red_dot"
                    android:drawablePadding="5dp"
                    android:focusable="true"
                    android:textSize="12sp"
                    />

                <ImageView
                    android:id="@+id/iv_download_system_fail_warning"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_below="@+id/tv_system_version"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/img_warning"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_system_update_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_system_version"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toRightOf="@+id/iv_download_system_fail_warning"
                    android:ellipsize="end"
                    android:gravity="left|center_vertical"
                    android:text="@string/about_robot_auto_update_download"
                    android:textColor="@color/base_blue"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone"
                    />

                <ProgressBar
                    android:id="@+id/system_version_progress"
                    style="@style/StyleProgressBarMini"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_system_update_tip"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/shape_progressbar_bg"
                    android:max="100"
                    android:progress="36"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_system_progress"
                    style="@style/ble_tv_robot_right"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_system_update_tip"
                    android:textSize="@dimen/sp_12"
                    android:visibility="visible"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_below="@+id/system_version_progress"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/base_line"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_firmware_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_system_version"
                >

                <TextView
                    android:id="@+id/tv_firmware_tip"
                    style="@style/ble_tv_robot_left"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="Voice FirmWare version"
                    />

                <TextView
                    android:id="@+id/tv_firmware_version"
                    style="@style/ble_tv_robot_right"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="@dimen/dp_15"
                    android:drawableEnd="@drawable/ble_update_red_dot"
                    android:drawablePadding="5dp"
                    android:focusable="true"
                    android:text="V1.0.1"
                    android:textSize="12sp"
                    />

                <ImageView
                    android:id="@+id/iv_download_firm_fail_warning"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_below="@+id/tv_firmware_tip"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/img_warning"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_firmware_update_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_firmware_tip"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toRightOf="@+id/iv_download_firm_fail_warning"
                    android:ellipsize="end"
                    android:gravity="left|center_vertical"
                    android:text="@string/about_robot_auto_update_download"
                    android:textColor="@color/base_blue"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone"
                    />

                <ProgressBar
                    android:id="@+id/firmware_version_progress"
                    style="@style/StyleProgressBarMini"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_firmware_update_tip"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/shape_progressbar_bg"
                    android:max="100"
                    android:progress="36"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_firmware_progress"
                    style="@style/ble_tv_robot_right"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_firmware_update_tip"
                    android:text="60%"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_below="@+id/firmware_version_progress"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/base_line"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_hardware_serial"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_below="@+id/rl_firmware_version"
                >

                <TextView
                    style="@style/ble_tv_robot_left"
                    android:text="HardWare Version"
                    />

                <TextView
                    android:id="@+id/tv_hardware_serial"
                    style="@style/ble_tv_robot_right"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    />


            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>